// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConflictDiffView RTL layout > snapshot: two-column diff view layout (LTR) 1`] = `
<div
  data-testid="conflict-diff-view"
>
  <div
    class="rounded-xl border px-4 py-3 text-sm border-warning/30 bg-warning/10 text-warning mb-4"
    role="alert"
  >
    <div
      class="flex items-start gap-2"
    >
      <div
        class="min-w-0 flex-1"
      >
        <div
          class=""
        >
          <p
            class="text-xs font-semibold text-warning"
          >
            safetyRecommendation
          </p>
          <p
            class="text-xs text-warning"
          >
            safetyRecommendationDetail
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid grid-cols-[1fr_1fr] gap-px overflow-hidden rounded-xl ring-[0.65px] ring-border/50 bg-secondary lg:max-h-[70svh] lg:overflow-y-auto"
    data-testid="diff-grid"
  >
    <div
      class="bg-primary/10 ps-4 pe-4 py-2"
    >
      <span
        class="text-xs font-semibold text-primary"
      >
        localVersion
      </span>
    </div>
    <div
      class="bg-secondary ps-4 pe-4 py-2"
    >
      <span
        class="text-xs font-semibold text-foreground"
      >
        remoteVersion
      </span>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.clinicalStatus
          </p>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          active
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.clinicalStatus
          </p>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          active
        </p>
      </div>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.verificationStatus
          </p>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          ·
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.verificationStatus
          </p>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          ·
        </p>
      </div>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.type
          </p>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          ·
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.type
          </p>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          ·
        </p>
      </div>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.category
          </p>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          ·
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.category
          </p>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          ·
        </p>
      </div>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.criticality
          </p>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          high
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.criticality
          </p>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          high
        </p>
      </div>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-warning/10"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.code
          </p>
          <span
            aria-label="Value differs from remote version"
            class="text-xs font-semibold text-warning"
          >
            differs
          </span>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          Penicillin
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-warning/10"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.code
          </p>
          <span
            aria-label="Value differs from local version"
            class="text-xs font-semibold text-warning"
          >
            differs
          </span>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          Amoxicillin
        </p>
      </div>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.reaction
          </p>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          ·
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.reaction
          </p>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          ·
        </p>
      </div>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.onsetDateTime
          </p>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          ·
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.onsetDateTime
          </p>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          ·
        </p>
      </div>
    </div>
    <div
      class="contents"
    >
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.note
          </p>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          ·
        </p>
      </div>
      <div
        class="ps-4 pe-4 py-2 bg-background"
      >
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs font-semibold text-muted-foreground"
          >
            field.note
          </p>
        </div>
        <p
          class="mt-0.5 text-sm text-foreground break-words"
        >
          ·
        </p>
      </div>
    </div>
  </div>
  <div
    class="mt-4 flex flex-wrap gap-2"
  >
    <button
      class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 px-4 gap-1.5"
      data-size="default"
      data-slot="button"
      data-testid="resolve-keep-both"
      data-variant="default"
      type="button"
    >
      <span
        class="text-xs font-semibold text-success"
      >
        recommended
      </span>
      keepBoth
    </button>
    <button
      class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 px-4 gap-1.5"
      data-size="default"
      data-slot="button"
      data-testid="resolve-prefer-local"
      data-variant="secondary"
      type="button"
    >
      preferLocal
    </button>
    <button
      class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 px-4 gap-1.5"
      data-size="default"
      data-slot="button"
      data-testid="resolve-prefer-remote"
      data-variant="secondary"
      type="button"
    >
      preferRemote
    </button>
  </div>
</div>
`;

exports[`ConflictDiffView RTL layout > snapshot: two-column diff view layout (RTL) 1`] = `
<div
  dir="rtl"
>
  <div
    data-testid="conflict-diff-view"
  >
    <div
      class="rounded-xl border px-4 py-3 text-sm border-warning/30 bg-warning/10 text-warning mb-4"
      role="alert"
    >
      <div
        class="flex items-start gap-2"
      >
        <div
          class="min-w-0 flex-1"
        >
          <div
            class=""
          >
            <p
              class="text-xs font-semibold text-warning"
            >
              safetyRecommendation
            </p>
            <p
              class="text-xs text-warning"
            >
              safetyRecommendationDetail
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid grid-cols-[1fr_1fr] gap-px overflow-hidden rounded-xl ring-[0.65px] ring-border/50 bg-secondary lg:max-h-[70svh] lg:overflow-y-auto"
      data-testid="diff-grid"
    >
      <div
        class="bg-primary/10 ps-4 pe-4 py-2"
      >
        <span
          class="text-xs font-semibold text-primary"
        >
          localVersion
        </span>
      </div>
      <div
        class="bg-secondary ps-4 pe-4 py-2"
      >
        <span
          class="text-xs font-semibold text-foreground"
        >
          remoteVersion
        </span>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.clinicalStatus
            </p>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            active
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.clinicalStatus
            </p>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            active
          </p>
        </div>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.verificationStatus
            </p>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            ·
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.verificationStatus
            </p>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            ·
          </p>
        </div>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.type
            </p>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            ·
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.type
            </p>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            ·
          </p>
        </div>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.category
            </p>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            ·
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.category
            </p>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            ·
          </p>
        </div>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.criticality
            </p>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            high
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.criticality
            </p>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            high
          </p>
        </div>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-warning/10"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.code
            </p>
            <span
              aria-label="Value differs from remote version"
              class="text-xs font-semibold text-warning"
            >
              differs
            </span>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            Penicillin
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-warning/10"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.code
            </p>
            <span
              aria-label="Value differs from local version"
              class="text-xs font-semibold text-warning"
            >
              differs
            </span>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            Amoxicillin
          </p>
        </div>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.reaction
            </p>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            ·
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.reaction
            </p>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            ·
          </p>
        </div>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.onsetDateTime
            </p>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            ·
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.onsetDateTime
            </p>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            ·
          </p>
        </div>
      </div>
      <div
        class="contents"
      >
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.note
            </p>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            ·
          </p>
        </div>
        <div
          class="ps-4 pe-4 py-2 bg-background"
        >
          <div
            class="flex items-center gap-1.5"
          >
            <p
              class="text-xs font-semibold text-muted-foreground"
            >
              field.note
            </p>
          </div>
          <p
            class="mt-0.5 text-sm text-foreground break-words"
          >
            ·
          </p>
        </div>
      </div>
    </div>
    <div
      class="mt-4 flex flex-wrap gap-2"
    >
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 px-4 gap-1.5"
        data-size="default"
        data-slot="button"
        data-testid="resolve-keep-both"
        data-variant="default"
        type="button"
      >
        <span
          class="text-xs font-semibold text-success"
        >
          recommended
        </span>
        keepBoth
      </button>
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 px-4 gap-1.5"
        data-size="default"
        data-slot="button"
        data-testid="resolve-prefer-local"
        data-variant="secondary"
        type="button"
      >
        preferLocal
      </button>
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 px-4 gap-1.5"
        data-size="default"
        data-slot="button"
        data-testid="resolve-prefer-remote"
        data-variant="secondary"
        type="button"
      >
        preferRemote
      </button>
    </div>
  </div>
</div>
`;
